src/objects/Person_Account__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipLabel>Person</relationshipLabel>
        <relationshipName>Person_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account_Number__r.RecType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>IF(Account_Number__r.Reference__c == &apos;BC01&apos;, &apos;Chevron&apos;, &apos;Spectrum&apos;)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <formula>Account_Number__r.Card_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Updated__c</fullName>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator__c</fullName>
        <label>Locator</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Type__c</fullName>
        <label>Name Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <formula>Account_Number__r.OPEN_DATE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POID__c</fullName>
        <label>POID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOrd__c</fullName>
        <label>ParentOrd</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <externalId>true</externalId>
        <label>PersonAccount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Person_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_ID_Number__c</fullName>
        <formula>PersonID__r.PersonID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecTypeID__c</fullName>
        <label>RecTypeID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecType__c</fullName>
        <label>RecType</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Type_Translate__c</fullName>
        <formula>RIGHT(( TypeTranslate__c ),(LEN( TypeTranslate__c )-5))</formula>
        <label>Split Type Translate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeTranslate__c</fullName>
        <label>Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Person Account</label>
    <listViews>
        <fullName>X00_All_Person_Accounts</fullName>
        <columns>PersonAccount__c</columns>
        <columns>PersonID__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>Account_Number__c</columns>
        <columns>TypeTranslate__c</columns>
        <columns>Name_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RecType__c</columns>
        <columns>RecTypeID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Date_Updated__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Number__c</field>
            <operation>contains</operation>
            <value>246053</value>
        </filters>
        <label>00 - All Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>X20_New_Person_Accounts</fullName>
        <columns>NAME</columns>
        <columns>PersonID__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>Account_Number__c</columns>
        <columns>TypeTranslate__c</columns>
        <columns>Name_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>20 - New Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>X30_Jeff_s_Person_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>PersonID__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>Account_Number__c</columns>
        <columns>TypeTranslate__c</columns>
        <columns>Name_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AccountID__c</columns>
        <columns>Account_Type__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>RecType__c</columns>
        <columns>RecTypeID__c</columns>
        <columns>Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Number__c</field>
            <operation>contains</operation>
            <value>0000239553</value>
        </filters>
        <filters>
            <field>Account_Number__c</field>
            <operation>contains</operation>
            <value>0250115650</value>
        </filters>
        <label>30 - Jeff&apos;s Person Accounts</label>
        <sharedTo>
            <role>IT</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Person Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Account</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>